Fix social icons on mobile

--- a/src/styles/_portfolio.styl
+++ b/src/styles/_portfolio.styl
@@ -60,6 +60,9 @@
   .portfolio
     padding: 30px 15px;
 
+    .projects-container 
+      margin-bottom: 400px;
+      
     h2 
       font-size: 42px;
 
